[gd_scene load_steps=6 format=2]

[ext_resource path="res://DroneWithChain.gd" type="Script" id=1]
[ext_resource path="res://Chain.tscn" type="PackedScene" id=2]
[ext_resource path="res://Drone/DronePrototype.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://RobotoMono-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = SubResource( 1 )

[node name="DroneWithChain" type="Node2D"]
script = ExtResource( 1 )

[node name="Chain" parent="." instance=ExtResource( 2 )]

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 0.109543, 3.8147e-006 )
node_a = NodePath("../Drone2")

[node name="Drone2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.109543, -40.5283 )

[node name="Camera2D" type="Camera2D" parent="Drone2"]
position = Vector2( 0, 40 )
current = true
limit_bottom = 1250
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="GameOverLabel" type="Label" parent="Drone2"]
visible = false
show_behind_parent = true
margin_left = -350.619
margin_top = -75.5283
margin_right = 729.381
margin_bottom = 189.472
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.772549, 0.223529, 0.0980392, 1 )
text = "Game over"
uppercase = true
[connection signal="drone_hit" from="Drone2" to="." method="_on_Drone2_drone_hit"]
